removed blog by deleting blog_nav_title in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
+title: Kevish K. Napal # the website title (if blank, full name will be used instead)
 first_name: Kevish
 middle_name: K.
 last_name: Napal
@@ -121,7 +121,7 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # -----------------------------------------------------------------------------
 
 blog_name: Welcome to my blog # blog_name will be displayed in your blog page
-blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
+blog_nav_title: # your blog must have a title for it to be displayed in the nav bar
 blog_description: Cool stuff related or not to my projects
 permalink: /blog/:year/:title/
 
